[project]
name = "yt-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "MuhammadRaffey", email = "muhammadraffey26@gmail.com" }]
requires-python = ">=3.11"
dependencies = ["requests>=2.32.3", "yt-dlp>=2025.2.19"]

[project.scripts]
download = "yt_downloader:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
